reduces size of button toolbar to avoid extra space and changes to top bar to allow clicking of canvas on transparent space

--- a/css/VFBToolBar.less
+++ b/css/VFBToolBar.less
@@ -1,7 +1,8 @@
 nav {
 	background-color: transparent;
-	overflow: hidden;
-    padding: 1em;
+	overflow: visible;
+    padding: 0;
+    height : 0px;
     border-bottom: 0;
 
 	a {
@@ -33,6 +34,7 @@ nav {
 		left: -20px;
 		margin-left: -20px;
         margin: 0 auto;
+        padding : 1em;
         
 
 		.wideDivL {
@@ -65,6 +67,7 @@ nav {
     .centralTitle {
 		margin: 0 auto;
 		width: 20%;
+		padding : 1em;
 
 		.wideDivC {
 			text-align: center;
@@ -82,8 +85,7 @@ nav {
     }
 
     .rightSide {
-		top: -25px;
-		margin-top: -25px;
+		margin-top: -40px;
 		float: right;
 
 		.wideDivR {
